[package]
name = "mrpack-distributor"
version = "0.1.0"
authors = ["Jade Nash <jade@lilydev.com>"]
description = "Builds from a packwiz project and distributes it to Modrinth and/or GitHub Releases."
keywords = ["minecraft", "utility", "modrinth", "modpack"]
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/LilydevMC/mrpack-distributor"
edition = "2021"


[dependencies]
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros", "full"] }
tokio-util = "0.7.9"
futures = "0.3.28"

clap = { version = "4.4.6", features = ["derive"] }

serenity = "0.11.6"

dotenvy = "0.15.7"

toml = "0.8.2"
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"

which = "4.4.2"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
chrono = "0.4.31"

fs_extra = "1.3.0"
glob = "0.3.1"

reqwest = { version = "0.11.22", default-features = false, features = [
    "serde_json", "json", "blocking", "multipart", "rustls-tls"
] }

anyhow = "1.0.75"
